infra/kube-prometheus-stack/requirements.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ${KPS_NAMESPACE:-monitoring}
  labels:
    toolkit.fluxcd.io/tenant: sthings-team
